--- a/SingularityUI/app/templates/newRequest.hbs
+++ b/SingularityUI/app/templates/newRequest.hbs
@@ -75,12 +75,14 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-success" disabled>
-            Save
-        </button>
-        <button id="reset-button" class="btn btn-default hide">
-            Reset
-        </button>
+        <div id="button-row">
+            <button type="submit" class="btn btn-success btn-lg" disabled>
+                Save
+            </button>
+            <button id="reset-button" class="btn btn-default btn-lg hide">
+                Reset
+            </button>
+        </div>
     </form>
 
     <div id="help-column" class="col-md-6 col-md-offset-1 hidden-xs hidden-sm">
