This should be a list

--- a/SingularityUI/app/templates/newDeploy.hbs
+++ b/SingularityUI/app/templates/newDeploy.hbs
@@ -91,7 +91,7 @@
                 <div class="form-group {{#if model.request.loadBalanced}}required{{/if}}">
                     <label>Load balancer groups</label>
                     <div class="multi-input">
-                        <input type="text" class="form-control lb-group" placeholder="format: key=value">
+                        <input type="text" class="form-control lb-group">
                     </div>
                 </div>
                 <div class="form-group">
