--- a/SingularityUI/app/templates/newDeploy.hbs
+++ b/SingularityUI/app/templates/newDeploy.hbs
@@ -37,6 +37,9 @@
                     <label for="num-ports">Num. ports</label>
                     <input type="text" id="num-ports" class="form-control">
                 </div>
+                <p class="col-sm-12 help-block text-muted">
+                    If you enter one of the three above in, you'll need to fill them all in
+                </p>
             </div>
         </fieldset>
 
