--- a/SingularityUI/app/styles/newForm.styl
+++ b/SingularityUI/app/styles/newForm.styl
@@ -41,6 +41,9 @@
         padding-top 15px
         border-top 1px solid #eee
 
+        span
+            display inline-block
+
 .multi-input
     
     input
