--- a/SingularityUI/app/templates/newDeploy.hbs
+++ b/SingularityUI/app/templates/newDeploy.hbs
@@ -219,9 +219,11 @@
         </div>
 
         <div id="button-row">
-            <button type="submit" class="btn btn-success btn-lg" disabled>
-                Deploy
-            </button>
+            <span>
+                <button type="submit" class="btn btn-success btn-lg" disabled>
+                    Deploy
+                </button>
+            </span>
             <button id="reset-button" class="btn btn-default btn-lg hide">
                 Reset
             </button>
