--- a/SingularityUI/app/templates/newRequest.hbs
+++ b/SingularityUI/app/templates/newRequest.hbs
@@ -76,9 +76,11 @@
         </div>
 
         <div id="button-row">
-            <button type="submit" class="btn btn-success btn-lg" disabled>
-                Save
-            </button>
+            <span>
+                <button type="submit" class="btn btn-success btn-lg" disabled>
+                    Save
+                </button>
+            </span>
             <button id="reset-button" class="btn btn-default btn-lg hide">
                 Reset
             </button>
