Foundation for custom executor artifacts

--- a/SingularityUI/app/templates/newDeploy.hbs
+++ b/SingularityUI/app/templates/newDeploy.hbs
@@ -197,19 +197,19 @@
 
                 <div id="artifact-button-row" class="row">
                     <div class="col-sm-4">
-                        <button class="btn btn-success btn-block">
+                        <button class="btn btn-success btn-block" data-artifact-type="embedded">
                             <span class="glyphicon glyphicon-plus"></span>
                             Embedded
                         </button>
                     </div>
                     <div class="col-sm-4">
-                        <button class="btn btn-success btn-block">
+                        <button class="btn btn-success btn-block" data-artifact-type="external">
                             <span class="glyphicon glyphicon-plus"></span>
                             External
                         </button>
                     </div>
                     <div class="col-sm-4">
-                        <button class="btn btn-success btn-block">
+                        <button class="btn btn-success btn-block" data-artifact-type="s3">
                             <span class="glyphicon glyphicon-plus"></span>
                             S3
                         </button>
