Updated global search help text

--- a/SingularityUI/app/templates/globalSearch.hbs
+++ b/SingularityUI/app/templates/globalSearch.hbs
@@ -5,7 +5,7 @@
         </div>
 
         <p class="hidden-xs text-muted tip">
-            Protip: You can press <kbd>s</kbd> to open global search and <kbd>esc</kbd> to close it.
+            Protip: You can press <kbd>s</kbd> or <kbd>t</kbd> to open global search and <kbd>esc</kbd> to close it.
         </p>
     
         <form class="search-form">
