--- a/SingularityUI/app/styles/newForm.styl
+++ b/SingularityUI/app/styles/newForm.styl
@@ -33,7 +33,7 @@
         border-top 1px solid #eee
 
         h1, h2, h3, h4, h5, h6
-            margin 0 0 10px
+            margin 0 0 15px
             color #888
 
     #button-row
@@ -81,3 +81,23 @@
 
 #artifact-button-row button
     margin-bottom 5px
+
+.artifact
+    position relative
+
+    .remove-button
+        position absolute
+        top 5px
+        right 5px
+        padding 0 5px
+        line-height 1.5em
+
+        &:hover
+            background #fff
+            border-radius 3px
+            cursor pointer
+
+        &:after
+            content '×'
+            font-size 20px
+            color #999
