--- a/SingularityUI/app/templates/newRequest.hbs
+++ b/SingularityUI/app/templates/newRequest.hbs
@@ -6,14 +6,14 @@
     <form class="col-md-5">
         <div class="form-group required">
             <label for="id">ID</label>
-            <input type="text" id="id" class="form-control" placeholder="my-awesome-request">
+            <input type="text" id="id" class="form-control" placeholder="eg: my-awesome-request">
         </div>
 
         <div class="form-group">
             <label for="owner-0">Owners</label>
             
             <div class="multi-input">
-                <input type="text" id="owner-0" class="owner form-control" placeholder="user@example.com">
+                <input type="text" id="owner-0" class="owner form-control" placeholder="eg: user@example.com">
             </div>
         </div>
 
@@ -85,7 +85,7 @@
         <div id="scheduled-expandable" class="expandable hide">
             <div class="form-group required">
                 <label for="schedule">Schedule</label>
-                <input type="text" id="schedule" class="form-control">
+                <input type="text" id="schedule" class="form-control" placeholder="eg: */5 * * * *">
             </div>
 
             <div class="form-group">
