Update to table icons

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -32,6 +32,9 @@
             padding-bottom 0
             padding-right 0
             font-size 0
+            
+            [title='JSON']
+                font-weight 500
 
             a
                 position relative
