--- a/SingularityUI/app/templates/requestDetail/requestScheduledTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestScheduledTasks.hbs
@@ -27,10 +27,10 @@
                     </td>
                     <td class="hidden-xs actions-column">
                         <a data-action="run-now" title="Run now">
-                            <span class="glyphicon glyphicon-repeat"></span>
+                            <span class="glyphicon glyphicon-flash"></span>
                         </a>
                         <a data-action="viewJSON" title="JSON">
-                            <span class="glyphicon glyphicon-th-list"></span>
+                            { }
                         </a>
                     </td>
                 </tr>
