--- a/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
@@ -30,10 +30,10 @@
                     </td>
                     <td class="actions-column hidden-xs">
                         <a data-task-id="{{ id }}" data-action="run-now" title="Run now">
-                            <span class="glyphicon glyphicon-repeat"></span>
+                            <span class="glyphicon glyphicon-flash"></span>
                         </a>
                         <a data-task-id="{{ id }}" data-action="viewJSON" title="JSON">
-                            <span class="glyphicon glyphicon-th-list"></span>
+                            { }
                         </a>
                     </td>
                 </tr>
