--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -33,7 +33,7 @@
             padding-right 0
             font-size 0
             
-            [title='JSON']
+            [title='JSON'], [data-original-title="JSON"]
                 font-weight 500
 
             a
