--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 
 h1, h2 {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .25);
+    text-align: center;
 }
 
 h1 {
@@ -33,7 +34,6 @@ h1 {
     font-size: 70px;
     margin-top: 100px;
     margin-bottom: 60px;
-    text-align: center;
     font-weight: 300 !important;
     color: #fff;
 }
@@ -42,7 +42,7 @@ h2 {
     color: #fff;
     color: rgba(255, 255, 255, .75);
     font-weight: 300 !important;
-    margin-bottom: 3em;
+    margin-bottom: 5em;
     line-height: 1.6em;
 }
 
@@ -74,6 +74,7 @@ h2 a:hover {
     position: absolute;
     left: 15px;
     top: 14px;
+    font-size: 14px;
 }
 
 input {
@@ -81,7 +82,7 @@ input {
     background: #fff;
     background: rgba(255, 255, 255, .85);
     color: #3069A4;
-    font-size: 16px;
+    font-size: 14px;
     border: none;
     display: block;
     padding: 1em 8%;
@@ -106,7 +107,6 @@ input::selection {
     display: inline-block;
     width: 100%;
     margin-bottom: 7em;
-    margin-top: 100px;
 }
 
 #button-container a {
@@ -121,6 +121,7 @@ input::selection {
     text-align: center;
     font-size: 20px;
     box-shadow: 0 0 0 4px rgba(0, 0, 0, .2);
+    font-weight: bolder;
 }
 
 #button-container a:first-child {
