chown the app directory to the current user

--- a/SingularityExecutor/src/main/resources/runner.sh.hbs
+++ b/SingularityExecutor/src/main/resources/runner.sh.hbs
@@ -22,6 +22,8 @@ else
   echo "No deploy-specific environment variables"
 fi
 
+sudo chown -R {{{ user }}} {{{ taskAppDirectory }}}
+
 cd {{{ taskAppDirectory }}}/
 
 # load artifact's profile.d
