--- a/SingularityExecutor/src/main/resources/deploy.env.hbs
+++ b/SingularityExecutor/src/main/resources/deploy.env.hbs
@@ -1,6 +1,7 @@
 # mesos task env
 {{#each env}}
 export {{{name}}}={{{bashEscaped value}}}
+echo "export {{{name}}}={{{bashEscaped value}}}"
 {{/each}}
 
 # HubSpot-Specific-TODO
