Added error message for 0 status

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -39,7 +39,7 @@ a.disabled:hover
 .page-header
     margin-top 20px
     margin-bottom 10px
-    
+
     h1, h2, h3
         margin 0
 
@@ -54,7 +54,7 @@ table th
 
 #page, .navbar .container-fluid
     max-width 1500px
-    
+
 #page
     padding 0 20px 50px 20px
 
@@ -76,6 +76,9 @@ code
     -webkit-user-select none
     -moz-user-select none
     -ms-user-select none
+
+.messenger-message p:last-child
+    margin-bottom 0
 
 // Fix for FF
 @-moz-document url-prefix()
