--- a/SingularityService/src/main/resources/templates/request_in_cooldown.jade
+++ b/SingularityService/src/main/resources/templates/request_in_cooldown.jade
@@ -33,5 +33,5 @@ html
           p #{ requestId } finished unsuccessfully #{ numFailures } time(s) consecutively within #{ cooldownExpiresFormat }. Singularity has placed it into a system cooldown in order to protect cluster resources:
             ul
               li New tasks will <em>still be scheduled and executed</em>, but these tasks will be delayed by #{cooldownDelayFormat}.
-              li This penalty will clear when either a task finishes successfully or less than #{numFailures} tasks fail to succeed within a period of #{cooldownExpiresFormat}.
+              li This penalty will clear when either a task finishes successfully or less than #{numFailures} tasks have failed, been killed or lost within a period of #{cooldownExpiresFormat}.
               li You will not receive failure mails for #{ requestId } while it is in cooldown.
