--- a/SingularityService/src/main/resources/templates/request_modified.jade
+++ b/SingularityService/src/main/resources/templates/request_modified.jade
@@ -24,9 +24,10 @@ html
         div(style="padding-bottom: 20px")
           div(style="border-top: 10px solid #df4210; padding: 20px; background: #eee; border-radius: 4px; text-align: center")
             h1(style="font-weight: normal; margin: 0 0 12px; line-height: 1.3") #{ requestId }
-            h2(style="font-weight: normal; margin: 0 0 21px; line-height: 1") has been #{ action } 
             if hasUser
-              by #{ user }
+              h2(style="font-weight: normal; margin: 0 0 21px; line-height: 1") has been #{ action } by #{ user }
+            else
+              h2(style="font-weight: normal; margin: 0 0 21px; line-height: 1") has been #{ action }
             a(style="background: #08c; color: #fff; padding: 10px 20px; display: inline-block; text-decoration: none; font-size: 13px; letter-spacing: .08em; text-transform: uppercase; border-radius: 3px", href="#{ singularityRequestLink }") View request
 
         div(style="padding-bottom: 20px")
