expose task id as MESOS_TASK_ID env var in runner script

--- a/SingularityExecutor/src/main/resources/runner.sh.hbs
+++ b/SingularityExecutor/src/main/resources/runner.sh.hbs
@@ -4,6 +4,8 @@
 # Task ID: {{{ taskId }}}
 #
 
+export MESOS_TASK_ID={{{bashEscaped taskId}}}  # I can't believe Mesos doesn't expose this.
+
 # load system-wide profile.d
 if [[ -d /etc/profile.d ]]; then
   for i in /etc/profile.d/*.sh; do
