--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -10,6 +10,13 @@
     <link rel="shortcut icon" href="{{{staticRoot}}}/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="{{{staticRoot}}}/css/app.css">
+    {{#navColor}}
+    <style>
+        .navbar-default {
+            background-color: {{{navColor}}};
+        }
+    </style>
+    {{/navColor}}
     <script>
         window.config = {
             appRoot: "{{{appRoot}}}",
