handle slave port variables.

--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -22,10 +22,10 @@
             appRoot: "{{{appRoot}}}",
             apiRoot: localStorage.getItem("apiRootOverride") || "{{{apiRoot}}}",
             title: "{{{title}}}",
-            mesosLogPort: {{{mesosLogsPort}}},
-            {{#mesosLogsPortHttps}}
-            mesosLogsPortHttps: {{{mesosLogsPortHttps}}}
-            {{/mesosLogsPortHttps}}
+            slaveHttpPort: {{{slaveHttpPort}}},
+            {{#slaveHttpsPort}}
+            slaveHttpsPort: {{{slaveHttpsPort}}}
+            {{/slaveHttpsPort}}
         };
     </script>
     <script src="{{{staticRoot}}}/js/app.js"></script>
