Scale request instances
- Adds separate PUT call to change just # instances
- Adds UI for request table + request page
- Fixes issue where scale down doesn’t work if cluster no longer sends
offers

--- a/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsAllBody.hbs
@@ -55,11 +55,7 @@
                             {{humanizeText state}}
                         </td>
                         <td class="visible-lg visible-xl centered">
-                            {{#if request.instances}}
-                                {{ request.instances }}
-                            {{else}}
-                                1
-                            {{/if}}
+                            {{ request.instances }}
                         </td>
                         <td class="visible-lg visible-xl">
                             {{ requestDeployState.activeDeploy.deployId }}
@@ -88,6 +84,9 @@
                                     <span class="glyphicon glyphicon-flash"></span>
                                 </a>
                             {{/if}}
+                            <a data-request-id="{{ request.id }}" data-action="scale" title="Scale">
+                                <span class="glyphicon glyphicon-signal"></span>
+                            </a>
                             <a data-request-id="{{ request.id }}" data-action="remove" title="Remove">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </a>
