--- a/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
@@ -49,11 +49,7 @@
                             </a>
                         </td>
                         <td class="visible-lg visible-xl centered">
-                            {{#if request.instances}}
-                                {{ request.instances }}
-                            {{else}}
-                                1
-                            {{/if}}
+                            {{ request.instances }}
                         </td>
                         <td class="visible-lg visible-xl">
                             {{ requestDeployState.activeDeploy.deployId }}
@@ -77,6 +73,9 @@
                                     <span class="glyphicon glyphicon-flash"></span>
                                 </a>
                             {{/if}}
+                            <a data-request-id="{{ request.id }}" data-action="scale" title="Scale">
+                                <span class="glyphicon glyphicon-signal"></span>
+                            </a>
                             <a data-request-id="{{ request.id }}" data-action="remove" title="Remove">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </a>
